# NDI-video-metadata-test

./: .gitignore  ReadMe.md
src/: CMakeLists.txt
src/receiver/: CMakeLists.txt  main.cpp
src/sender/: CMakeLists.txt  main.cpp
